force-app/main/default/objects/Contact/fields/Interest_Comments__c.field-meta.xml
<CustomField>
    <fullName>Interest_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interest Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>