force-app/main/default/objects/Contact/fields/Invalid_Email__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Email__c</fullName>
    <description>An existing email address for a customer does not contain a valid email format and it prevents the customer file from being loaded. This field will hold those email addresses until corrected and moved into one of the 3 email addresses on the customer record</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is only populated when a customer has an invalid email address in one of the Bank&#39;s source systems (Hogan, Harland, TBS, Web).  This field is not editable and will only be cleared once the invalid email condition is corrected at the source.</inlineHelpText>
    <label>Invalid Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>