force-app/main/default/objects/Contact/fields/ISO_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>ISO_Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ISO Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>