force-app/main/default/objects/Contact/fields/ISO_Name__c.field-meta.xml
<CustomField>
    <fullName>ISO_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ISO Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>