force-app/main/default/objects/Contact/fields/Local_Seminar__c.field-meta.xml
<CustomField>
    <fullName>Local_Seminar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Seminar</label>
    <type>Checkbox</type>
</CustomField>