force-app/main/default/objects/Contact/fields/Mailing_Address_Same_as_Home_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Same_as_Home_Address__c</fullName>
    <defaultValue>&#39;Yes&#39;</defaultValue>
    <label>Mailing Address Same as Above</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>