force-app/main/default/objects/Contact/fields/MailingAddressValidator__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressValidator__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MailingAddressValidator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>