force-app/main/default/objects/Contact/fields/Middle__c.field-meta.xml
<CustomField>
    <fullName>Middle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Middle</label>
    <length>40</length>
    <type>Text</type>
</CustomField>