force-app/main/default/objects/Contact/fields/Mother_s_Maiden_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Maiden_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mother&#39;s Maiden Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>