force-app/main/default/objects/Contact/fields/NEST_Ascensus_Direct_Unique_ID_Record__c.field-meta.xml
<CustomField>
    <fullName>NEST_Ascensus_Direct_Unique_ID_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NEST Ascensus Direct Unique ID Record</label>
    <referenceTo>NEST_Ascensus_Direct_Unique_ID_Record__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>