force-app/main/default/objects/Contact/fields/NEST_Firm_ID__c.field-meta.xml
<CustomField>
    <fullName>NEST_Firm_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NEST Firm ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>