force-app/main/default/objects/Contact/fields/NEST_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>NEST_Firm_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NEST Firm Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>