force-app/main/default/objects/Contact/fields/NEST_Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>NEST_Rep_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NEST Rep ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>