force-app/main/default/objects/Contact/fields/NetProspex_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>NetProspex_Contact_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>NetProspex Contact ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>