force-app/main/default/objects/Contact/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Architecture and Engineering</fullName>
            </value>
            <value>
                <fullName>Arts Design Entertainment Sports and Media</fullName>
            </value>
            <value>
                <fullName>Buildings and Ground Cleaning Maintenance and Related</fullName>
            </value>
            <value>
                <fullName>Business and Financial Operations</fullName>
            </value>
            <value>
                <fullName>Community and Social Services</fullName>
            </value>
            <value>
                <fullName>Computer and Mathematical</fullName>
            </value>
            <value>
                <fullName>Construction and Extraction</fullName>
            </value>
            <value>
                <fullName>Education Training and Library</fullName>
            </value>
            <value>
                <fullName>Farming Fishing and Forestry</fullName>
            </value>
            <value>
                <fullName>Food Service Preparation and Serving Related</fullName>
            </value>
            <value>
                <fullName>Healthcare Support</fullName>
            </value>
            <value>
                <fullName>Healthcare Practitioners and Technical</fullName>
            </value>
            <value>
                <fullName>Installation Maintenance and Repair</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Life Physical and Social Sciences</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Office and Administrative Support</fullName>
            </value>
            <value>
                <fullName>Personal Care and Service</fullName>
            </value>
            <value>
                <fullName>Transportation and Material Moving</fullName>
            </value>
            <value>
                <fullName>Protective Services</fullName>
            </value>
            <value>
                <fullName>Sales and Related</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Not Employed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>