force-app/main/default/objects/Contact/fields/Outside_Counsel__c.field-meta.xml
<CustomField>
    <fullName>Outside_Counsel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outside Counsel</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Outside Counsel</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>