force-app/main/default/objects/Contact/fields/Owner_Market__c.field-meta.xml
<CustomField>
    <fullName>Owner_Market__c</fullName>
    <description>This formula field pulls the Contact (or Person Account) owner&#39;s Market from their respective user profile.</description>
    <formula>TEXT(Owner.User_s_Market__c)</formula>
    <inlineHelpText>This formula field pulls the Contact (or Person Account) owner&#39;s Market from their respective user profile.</inlineHelpText>
    <label>Owner Market</label>
    <type>Text</type>
</CustomField>