force-app/main/default/objects/Contact/fields/Personal_Interests__c.field-meta.xml
<CustomField>
    <fullName>Personal_Interests__c</fullName>
    <label>Personal Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aims Community College</fullName>
            </value>
            <value>
                <fullName>Bank Events</fullName>
            </value>
            <value>
                <fullName>Casual Dining</fullName>
            </value>
            <value>
                <fullName>Charity Events</fullName>
            </value>
            <value>
                <fullName>Chicago Bears</fullName>
            </value>
            <value>
                <fullName>Chicago Blackhawks</fullName>
            </value>
            <value>
                <fullName>Chicago Bulls</fullName>
            </value>
            <value>
                <fullName>Chicago Cubs</fullName>
            </value>
            <value>
                <fullName>Chicago White Sox</fullName>
            </value>
            <value>
                <fullName>College Sports</fullName>
            </value>
            <value>
                <fullName>Colorado Avalanche</fullName>
            </value>
            <value>
                <fullName>Colorado Buffaloes</fullName>
            </value>
            <value>
                <fullName>Colorado Eagles Hockey</fullName>
            </value>
            <value>
                <fullName>Colorado Rockies</fullName>
            </value>
            <value>
                <fullName>Comedy Acts</fullName>
            </value>
            <value>
                <fullName>Concerts</fullName>
            </value>
            <value>
                <fullName>Craft Brewing Industry</fullName>
            </value>
            <value>
                <fullName>Creighton Basketball</fullName>
            </value>
            <value>
                <fullName>CSU Alumni</fullName>
            </value>
            <value>
                <fullName>CSU Basketball</fullName>
            </value>
            <value>
                <fullName>CSU Football</fullName>
            </value>
            <value>
                <fullName>CU Alumni</fullName>
            </value>
            <value>
                <fullName>CU Basketball</fullName>
            </value>
            <value>
                <fullName>CU Football</fullName>
            </value>
            <value>
                <fullName>CWS</fullName>
            </value>
            <value>
                <fullName>Dallas Cowboys</fullName>
            </value>
            <value>
                <fullName>Dallas Mavericks</fullName>
            </value>
            <value>
                <fullName>Denver Broncos</fullName>
            </value>
            <value>
                <fullName>Denver Nuggets</fullName>
            </value>
            <value>
                <fullName>Family/Young Kids</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>