force-app/main/default/objects/Contact/fields/Position_Architecture_and_Eng__c.field-meta.xml
<CustomField>
    <fullName>Position_Architecture_and_Eng__c</fullName>
    <description>Online App</description>
    <label>Position - Architecture and Eng</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aerospace Engineer/Ops Tech</fullName>
            </value>
            <value>
                <fullName>Agricultural Engineer</fullName>
            </value>
            <value>
                <fullName>Architect/Civil Drafter</fullName>
            </value>
            <value>
                <fullName>Biomedical Engineer</fullName>
            </value>
            <value>
                <fullName>Cartographer/Photogrammetrist</fullName>
            </value>
            <value>
                <fullName>Chemical Engineer</fullName>
            </value>
            <value>
                <fullName>Civil Engineer</fullName>
            </value>
            <value>
                <fullName>Computer Engineer</fullName>
            </value>
            <value>
                <fullName>Drafter</fullName>
            </value>
            <value>
                <fullName>Electronical Engineer</fullName>
            </value>
            <value>
                <fullName>Engineering Technician</fullName>
            </value>
            <value>
                <fullName>Environmental Engineer</fullName>
            </value>
            <value>
                <fullName>Health/Safety Engineer</fullName>
            </value>
            <value>
                <fullName>Industrial Engineer</fullName>
            </value>
            <value>
                <fullName>Landscape Architect</fullName>
            </value>
            <value>
                <fullName>Manager, Surveyor</fullName>
            </value>
            <value>
                <fullName>Marine Engineer/Naval Architect</fullName>
            </value>
            <value>
                <fullName>Materials Engineer</fullName>
            </value>
            <value>
                <fullName>Mechanical Engineer</fullName>
            </value>
            <value>
                <fullName>Mining/Safety-Geo Engineer</fullName>
            </value>
            <value>
                <fullName>Nuclear Engineer</fullName>
            </value>
            <value>
                <fullName>Petroleum Engineer</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Safety Supervisor</fullName>
            </value>
            <value>
                <fullName>Supervisor Capagraphy/Mapping</fullName>
            </value>
            <value>
                <fullName>Surveying/Mapping Technician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>