force-app/main/default/objects/Contact/fields/Position_Arts_Design_Ent_Sports__c.field-meta.xml
<CustomField>
    <fullName>Position_Arts_Design_Ent_Sports__c</fullName>
    <description>Online App</description>
    <label>Position - Arts, Design, Ent, Sports</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actor, Producer &amp; Director</fullName>
            </value>
            <value>
                <fullName>Art Appraiser/Consultant</fullName>
            </value>
            <value>
                <fullName>Art Dealer/Owner</fullName>
            </value>
            <value>
                <fullName>Art Director</fullName>
            </value>
            <value>
                <fullName>Artist</fullName>
            </value>
            <value>
                <fullName>Athlete</fullName>
            </value>
            <value>
                <fullName>Audio Sound &amp; Video,Broadcast Tech</fullName>
            </value>
            <value>
                <fullName>Camera Operator</fullName>
            </value>
            <value>
                <fullName>Coach &amp; Scout</fullName>
            </value>
            <value>
                <fullName>Dancer &amp; Choreographer</fullName>
            </value>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>Editor</fullName>
            </value>
            <value>
                <fullName>Entertainer &amp; Performer-All Other</fullName>
            </value>
            <value>
                <fullName>Film &amp; Video Editor</fullName>
            </value>
            <value>
                <fullName>Interpreter &amp; Translator</fullName>
            </value>
            <value>
                <fullName>Media &amp; Communication Worker-All Other</fullName>
            </value>
            <value>
                <fullName>Multi-Media Artist &amp; Animators</fullName>
            </value>
            <value>
                <fullName>Music Director &amp; Composer</fullName>
            </value>
            <value>
                <fullName>Musicians &amp; Signers</fullName>
            </value>
            <value>
                <fullName>News Anchor/Analyst</fullName>
            </value>
            <value>
                <fullName>Photographer</fullName>
            </value>
            <value>
                <fullName>Public Relations Specialist</fullName>
            </value>
            <value>
                <fullName>Radio &amp; Television Announcer</fullName>
            </value>
            <value>
                <fullName>Radio Operator</fullName>
            </value>
            <value>
                <fullName>Reporter &amp; Correspondent</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Sport - All Other</fullName>
            </value>
            <value>
                <fullName>Sport Official</fullName>
            </value>
            <value>
                <fullName>Writer/Technical Writer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>