force-app/main/default/objects/Contact/fields/Position_Buildings_and_Ground__c.field-meta.xml
<CustomField>
    <fullName>Position_Buildings_and_Ground__c</fullName>
    <description>Online App</description>
    <label>Position - Buildings and Ground</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Janitor &amp; Cleaner</fullName>
            </value>
            <value>
                <fullName>Landscape &amp; Ground Keeping</fullName>
            </value>
            <value>
                <fullName>Maid &amp; Housekeeping</fullName>
            </value>
            <value>
                <fullName>Odd Jobs</fullName>
            </value>
            <value>
                <fullName>Owner of Landscaping Service</fullName>
            </value>
            <value>
                <fullName>Pest Control Worker</fullName>
            </value>
            <value>
                <fullName>Pesticide Handler &amp; Sprayer</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Supervisor/Manager-Landscape &amp; Grounds keeping</fullName>
            </value>
            <value>
                <fullName>Supervisor/Manager-Landscape &amp; Janitorial</fullName>
            </value>
            <value>
                <fullName>Tree Trimmer &amp; Pruner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>