force-app/main/default/objects/Contact/fields/Position_Business_and_Financial_Op__c.field-meta.xml
<CustomField>
    <fullName>Position_Business_and_Financial_Op__c</fullName>
    <description>Online App</description>
    <label>Position - Business and Financial Op</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountant/Auditor</fullName>
            </value>
            <value>
                <fullName>Agent/Business Manager</fullName>
            </value>
            <value>
                <fullName>Benefits/Comp Specialist</fullName>
            </value>
            <value>
                <fullName>Budget/Credit Analyst</fullName>
            </value>
            <value>
                <fullName>Business Analyst &amp; Consultant</fullName>
            </value>
            <value>
                <fullName>Claims Adjuster/Investigator</fullName>
            </value>
            <value>
                <fullName>Compliance Specialist</fullName>
            </value>
            <value>
                <fullName>Emergency Management Spec</fullName>
            </value>
            <value>
                <fullName>Financial Advisor</fullName>
            </value>
            <value>
                <fullName>Financial Examiner</fullName>
            </value>
            <value>
                <fullName>Financial/Securities Analyst</fullName>
            </value>
            <value>
                <fullName>HR Recruiter</fullName>
            </value>
            <value>
                <fullName>Insurance Appraiser</fullName>
            </value>
            <value>
                <fullName>Loan Officer/Counselor</fullName>
            </value>
            <value>
                <fullName>Meeting/Convention Planners</fullName>
            </value>
            <value>
                <fullName>Owner/Partner-Accounting</fullName>
            </value>
            <value>
                <fullName>Owner/Partner-Financial Advisor</fullName>
            </value>
            <value>
                <fullName>Owner/Partner-Real Estate Appraiser</fullName>
            </value>
            <value>
                <fullName>Purchasing Agent/Buyer</fullName>
            </value>
            <value>
                <fullName>Real Estate-Appraiser/Assessor</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Tax Examiner/Collector</fullName>
            </value>
            <value>
                <fullName>Tax Preparer/Consultant</fullName>
            </value>
            <value>
                <fullName>Training/Development Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>