force-app/main/default/objects/Contact/fields/Position_Code__c.field-meta.xml
<CustomField>
    <fullName>Position_Code__c</fullName>
    <label>Position Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01 - Dealer Principal</fullName>
            </value>
            <value>
                <fullName>02 - General Manager</fullName>
            </value>
            <value>
                <fullName>03 - General Sales Manager</fullName>
            </value>
            <value>
                <fullName>04 - Sales Manager</fullName>
            </value>
            <value>
                <fullName>05 - Truck Sales Manager</fullName>
            </value>
            <value>
                <fullName>06 - Office Manager</fullName>
            </value>
            <value>
                <fullName>07 - Used Car Sales Manager</fullName>
            </value>
            <value>
                <fullName>08 - Parts Manager</fullName>
            </value>
            <value>
                <fullName>09 - Service Manager</fullName>
            </value>
            <value>
                <fullName>10 - Body Shop Manager</fullName>
            </value>
            <value>
                <fullName>11 - F&amp;I / Business Manager</fullName>
            </value>
            <value>
                <fullName>12 - New Car Sales</fullName>
            </value>
            <value>
                <fullName>13 - Service Advisor</fullName>
            </value>
            <value>
                <fullName>14 - Parts Advisor</fullName>
            </value>
            <value>
                <fullName>15 - Dealer Sales Administrator/NVDR Person</fullName>
            </value>
            <value>
                <fullName>16 - Dealer Service Administration</fullName>
            </value>
            <value>
                <fullName>17 - Service Director</fullName>
            </value>
            <value>
                <fullName>18 - Shop Foreman</fullName>
            </value>
            <value>
                <fullName>19 - Parts Administration</fullName>
            </value>
            <value>
                <fullName>20 - Lube Specialist</fullName>
            </value>
            <value>
                <fullName>22 - Vice President</fullName>
            </value>
            <value>
                <fullName>23 - Service Technician</fullName>
            </value>
            <value>
                <fullName>24 - Body Shop Technician</fullName>
            </value>
            <value>
                <fullName>25 - Assistant Sales Manager</fullName>
            </value>
            <value>
                <fullName>26 - System Coordinator</fullName>
            </value>
            <value>
                <fullName>27 - Assistant Service Manager</fullName>
            </value>
            <value>
                <fullName>28 - New Vehicle Prep</fullName>
            </value>
            <value>
                <fullName>29 - Warranty Administration</fullName>
            </value>
            <value>
                <fullName>30 - Fleet Manager</fullName>
            </value>
            <value>
                <fullName>31 - Dealer Customer Relations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>