force-app/main/default/objects/Contact/fields/Position_Community_and_Social_Serv__c.field-meta.xml
<CustomField>
    <fullName>Position_Community_and_Social_Serv__c</fullName>
    <description>Online App</description>
    <label>Position - Community and Social Serv</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community &amp; Social Services</fullName>
            </value>
            <value>
                <fullName>Counselor</fullName>
            </value>
            <value>
                <fullName>Director-Religious Activity &amp; Education</fullName>
            </value>
            <value>
                <fullName>Health Educator</fullName>
            </value>
            <value>
                <fullName>Marriage &amp; Family Therapist</fullName>
            </value>
            <value>
                <fullName>Mental Health/Rehab Counselor</fullName>
            </value>
            <value>
                <fullName>Probation/Correctional Officer</fullName>
            </value>
            <value>
                <fullName>Religious Worker</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>School Counselor</fullName>
            </value>
            <value>
                <fullName>Social &amp; Human Service Assist</fullName>
            </value>
            <value>
                <fullName>Social Worker</fullName>
            </value>
            <value>
                <fullName>Substance Abuse &amp; Behavior Counselor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>