force-app/main/default/objects/Contact/fields/Position_Computer_and_Math__c.field-meta.xml
<CustomField>
    <fullName>Position_Computer_and_Math__c</fullName>
    <description>Online App</description>
    <label>Position - Computer and Math</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actuaries/Statistician</fullName>
            </value>
            <value>
                <fullName>Computer Engineer</fullName>
            </value>
            <value>
                <fullName>Computer Programmer/Developer</fullName>
            </value>
            <value>
                <fullName>Computer Specialist -All Other</fullName>
            </value>
            <value>
                <fullName>Computer Support Specialist</fullName>
            </value>
            <value>
                <fullName>Computer Systems Analyst</fullName>
            </value>
            <value>
                <fullName>Computer &amp; Info Scientist-Research</fullName>
            </value>
            <value>
                <fullName>Data Communications Manager</fullName>
            </value>
            <value>
                <fullName>Database Administrator</fullName>
            </value>
            <value>
                <fullName>Mathematician</fullName>
            </value>
            <value>
                <fullName>Network Manager/Administrator</fullName>
            </value>
            <value>
                <fullName>Operations Research Analyst</fullName>
            </value>
            <value>
                <fullName>Supervisor Programmer</fullName>
            </value>
            <value>
                <fullName>Supervisor, Computer Analyst</fullName>
            </value>
            <value>
                <fullName>Web Designer/Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>